<resources>
    <string name="app_name">Flashcard App</string>
    <string name="question">Who is the 44th President of the United States?</string>
    <string name="answer">Barack Obama</string>
    <string name="option1">Bill Clinton</string>
    <string name="option2">George H. W. Bush</string>
    <string name="option3">Barack Obama</string>
    <string name="showDescription">Show options when clicked.</string>
    <string name="hideDescription">Hide options when clicked.</string>
    <string name="addActivity">Opens a new activity.</string>
    <string name="cancelActivity">Cancel Activity</string>
    <string name="questionHint">Enter the question here</string>
    <string name="answerHint">Enter the answer here</string>
    <string name="saveActivity">Save information on current activity</string>
</resources>